<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">@string/project_title0</string>
    <string name="project_title0">MEDIC</string>
    <string name="project_title1">Localised Personal Health Tracker Extended</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="menu_alarm">Alarms</string>
    <string name="menu_appointment">Appointments</string>
    <string name="menu_hospital">Locate a Hospital</string>
    <string name="welcome">"Welcome !"</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_up_with_phone">Sign up with Phone number instead</string>
    <string name="action_sign_up_with_email">Sign up with e-mail instead</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="start_date">Start Date</string>
    <string name="start_time">Start Time</string>
    <string name="stop_date">Stop Date</string>
    <string name="stop_time">Stop Time</string>
    <string name="img_thumb_desc">Scheduled Time Illustration</string>
    <string name="menu_save_alarm">Save</string>
    <string name="edit_alarm_found_match">Alarm duplicate found!</string>
    <string name="edit_alarm_successful_save">Alarm saved and scheduled!</string>
    <string name="edit_alarm_unsuccessful_save">Alarm could not be saved…</string>
    <string name="edit_alarm_successful_update">Alarm updated and re-scheduled!</string>
    <string name="edit_alarm_unsuccessful_update">Alarm could not be updated…</string>
    <string name="administration_per_day">Administration (per day)</string>
    <string name="vibrate_state_label">Vibrate</string>
    <string name="alarm_tone_picker_label">Alarm Tone: %s</string>
    <string name="select_alarm_tone">Select Alarm Tone</string>
    <string name="date_f">%2d-%2d-%4d</string>
    <string name="menu_save_appointment">Save</string>
    <string name="reminder_title">Remind me about</string>
    <string name="appointment_location">Location</string>
    <string name="edit_appointment_found_match">Appointment duplicate found!</string>
    <string name="edit_appointment_successful_save">Appointment saved and scheduled!</string>
    <string name="edit_appointment_unsuccessful_save">Appointment could not be saved…</string>
    <string name="edit_appointment_successful_update">Appointment updated and re-scheduled!</string>
    <string name="edit_appointment_unsuccessful_update">Appointment could not be updated…</string>
    <string name="repeat">Repeat</string>
    <string name="action_settings">Settings</string>
    <string name="action_skip">Skip</string>
    <string name="action_view_profile">View Profile</string>
    <string name="news_settings_menu_title">Settings</string>
    <string name="settings_summary">Configurations for...</string>
    <string name="settings_alarm_header">Alarm</string>
    <string name="settings_alarm_volume_key" translatable="false">alarm_volume_key</string>
    <string name="settings_alarm_volume_label">Alarm Volume</string>
    <string name="settings_alarm_ring_duration_key" translatable="false">alarm_ring_duration</string>
    <string name="settings_alarm_ring_duration_label">Alarm Ring Duration</string>
    <string name="calendar_header">Calendar</string>
    <string name="settings_reminder_volume_key" translatable="false">reminder_volume_key</string>
    <string name="settings_reminder_volume_label">Reminder Volume</string>
    <string name="settings_calendar_reminder_duration_key" translatable="false">calendar_reminder_duration</string>
    <string name="settings_calendar_reminder_duration_label">Calendar Reminder Duration</string>
    <string name="settings_language_key" translatable="false">languages</string>
    <string name="settings_language_label">Preferred Language</string>
    <string name="settings_snooze_length_key" translatable="false">snooze_length</string>
    <string name="settings_snooze_length_label">Snooze Length</string>
    <string name="settings_hour_format_key" translatable="false">hour_format_key</string>
    <string name="settings_hour_format_label">Hour Format</string>
    <string name="hour_format_12_key" translatable="false">twelve_hours_key</string>
    <string name="hour_format_12_label">12 Hours</string>
    <string name="hour_format_24_key" translatable="false">twenty_four_hours_key</string>
    <string name="hour_format_24_label">24 Hours</string>
    <string name="one_min_key" translatable="false">one_minute_key</string>
    <string name="three_mins_key" translatable="false">three_minutes_key</string>
    <string name="five_mins_key" translatable="false">five_minutes_key</string>
    <string name="ten_mins_key" translatable="false">ten_minutes_key</string>
    <string name="one_min_label">1 minute</string>
    <string name="three_mins_label">3 minutes</string>
    <string name="five_mins_label">5 minutes</string>
    <string name="ten_mins_label">10 minutes</string>
    <string name="lang_english_key" translatable="false">english_key</string>
    <string name="lang_hausa_key" translatable="false">hausa_ng_key</string>
    <string name="lang_igbo_key" translatable="false">igbo_ng_key</string>
    <string name="lang_yoruba_key" translatable="false">yoruba_ng_key</string>
    <string name="lang_english_label">English (NG)</string>
    <string name="lang_hausa_label">Hausa (NG)</string>
    <string name="lang_igbo_label">Igbo (NG)</string>
    <string name="lang_yoruba_label">Yoruba (NG)</string>
    <string name="admin_capsule">CAPSULE</string>
    <string name="admin_drops">DROPS</string>
    <string name="admin_inhalant">INHALANT</string>
    <string name="admin_injection">INJECTION</string>
    <string name="admin_ointment">OINTMENT</string>
    <string name="admin_solution">SOLUTION</string>
    <string name="admin_spray">SPRAY</string>
    <string name="admin_tablet">TABLET</string>
    <string name="q24h">1</string>
    <string name="q12h">2</string>
    <string name="q8h">3</string>
    <string name="q6h">4</string>
    <string name="q4h">6</string>
    <string name="remind_1_hour_before">Remind one hour before appointment</string>
    <string name="remind_2_hours_before">Remind two hours before appointment</string>
    <string name="remind_5_hours_before">Remind five hours before appointment</string>
    <string name="remind_1_day_before">Remind one day before appointment</string>
    <string name="remind_2_days_before">Remind two days before appointment</string>
    <string name="remind_1_week_before">Remind one week before appointment</string>
    <string name="description_direction_both">Swipe left to snooze or right to dismiss</string>
    <string name="alarm_alert_off_text">Alarm off</string>
    <string name="alarm_alert_snooze_text">Snooze</string>
    <string name="alarm_alert_dismiss_text">Dismiss</string>
    <string name="alarm_missed_title">Missed alarm</string>
    <string name="alarm_missed_text"><xliff:g id="alarm_time">%1$s</xliff:g> - <xliff:g id="alarm_label">%2$s</xliff:g></string>
    <string name="alarm_alert_snoozed_text">Snoozed</string>
    <plurals name="alarm_alert_snooze_duration">
        
        <item quantity="one">1 min</item>
        
        <item quantity="other"><xliff:g example="7" id="number">%d</xliff:g> min</item>
    </plurals>
    <plurals name="alarm_alert_snooze_set">
        
        <item quantity="one">Snoozing for 1 minute.</item>
        
        <item quantity="other">Snoozing for <xliff:g id="minutes">%d</xliff:g> minutes.</item>
    </plurals>
    <string name="category_alarm">Alarm</string>
    <string name="action_dismiss">Dismiss</string>
    <string name="action_hide">Hide</string>
    <string name="action_snooze">Snooze</string>
    <string name="description_direction_right">Swipe right to dismiss</string>
    <string name="description_direction_left">Swipe left to snooze</string>
    <string name="alarms_blocked_by_dnd">Device is set to total silence</string>
    <string name="alarm_volume_muted">Alarm volume muted</string>
    <string name="unmute_alarm_volume">Unmute</string>
    <string name="silent_default_alarm_ringtone">Default alarm ringtone is silent</string>
    <string name="change_setting_action">Change</string>
    <string name="app_notifications_blocked">Clock notifications are blocked</string>
    <string name="label_deskclock">DeskClock</string>
    <string name="nav_header_title">WAZOBIA</string>
    <string name="nav_header_subtitle">Personal Health Tracker (Extended)</string>
    <string name="nav_header_desc">FYP</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>