<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_main"
    app:startDestination="@+id/nav_alarm">

    <fragment
        android:id="@+id/nav_alarm"
        android:name="com.blogspot.thengnet.medic.AlarmsFragment"
        android:label="@string/menu_alarm"
        tools:layout="@layout/fragment_alarms" />

    <fragment
        android:id="@+id/nav_appointment"
        android:name="com.blogspot.thengnet.medic.AppointmentsFragment"
        android:label="@string/menu_appointment"
        tools:layout="@layout/fragment_appointments" />

    <fragment
        android:id="@+id/nav_hospital"
        android:name="com.blogspot.thengnet.medic.MapFragment"
        android:label="@string/menu_hospital"
        tools:layout="@layout/fragment_map" />
</navigation>