<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EditAlarmActivity">

    <data>

        <variable
            name="alarm"
            type="com.blogspot.thengnet.medic.Alarm" />
    </data>

    <!-- TODO: Consider wrapping {@link TextView} inside of {@link TextInputLayout} or make
          {@link TextInputEditText} uneditable (via a non-deprcated method)-->

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkable="true"
        app:cardElevation="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_alarm_thumbnail"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:clickable="false"
                android:focusable="false"
                android:contentDescription="@string/img_thumb_desc"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/ic_menu_day" />

            <TextView
                android:id="@+id/textview_schedule_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@{alarm.title}"
                app:layout_constraintLeft_toRightOf="@id/image_alarm_thumbnail"
                app:layout_constraintRight_toLeftOf="@id/switch_schedule"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linear_date_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintLeft_toRightOf="@id/image_alarm_thumbnail"
                app:layout_constraintRight_toLeftOf="@id/switch_schedule"
                app:layout_constraintTop_toBottomOf="@id/textview_schedule_title">

                <LinearLayout
                    android:id="@+id/linear_start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/start_date">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_start_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:editable="false"
                            android:inputType="date|none"
                            android:text="@{alarm.startDate}"
                            tools:text="2021-06-30" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/start_time">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_start_time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:editable="false"
                            android:inputType="time"
                            android:text="@{alarm.startTime}"
                            tools:text="05:05:05:005" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/textview_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{alarm.description}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/image_alarm_thumbnail"
                app:layout_constraintTop_toBottomOf="@id/linear_date_time" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_schedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/textview_schedule_title"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</layout>